--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylessheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Alura Plus</title>
 </head>
 <body>
-    
+    <section class="principal container">
+        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <img src="img/combo.png" alt="O Alura +" >
+    </section>
 </body>
 </html>
