--- a/index.html
+++ b/index.html
@@ -20,12 +20,28 @@
         </div>
     </section>
 
-    <section class="container__secundario">
+    <section class="container secundario">
             <img src="img/plataformas.png" alt="Um monitor e um celular com a alura plus aberto" class="secundario__imagem">
             <div class="container__descricao">
                 <h2 class="descricao__titulo">Assista do seu jeito</h2>
                 <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
             </div>
-        </section>
+    </section>
+
+    <section class="container secundario">
+            <div class="container__descricao">
+                <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+                <a href="www.alura.com.br" class="container__botao secundario__botao"> Assinar o Combo+</a>
+            </div>
+            <img src="img/telas.png" alt="Tela da alura plus e do alura linguas" class="secundario__imagem">
+    </section>
+
+    <section class="container secundario">
+        <img src="img/notebook.png" alt="Um notebook com Alura Plus" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+        </div>
+</section>
 </body>
 </html>
